# Combat-Simulation-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: GameController.hpp  Grid.hpp  Unit.hpp
outputs/: test_output.json
src/: Grid.cpp  Unit.cpp  main.cpp
